# envswitch

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml  envswitch.toml  flake.nix  justfile
.github/workflows/: check.yml  nix-github-actions.yml  release.yml
examples/readme/: check.sh  envswitch.toml
src/: cli.rs  config.rs  config_walker.rs  current_env.rs  main.rs  shell.rs  test.rs
src/shell/: bash_setup.sh  fish_setup.fish  zsh_setup.zsh
src/test/: helpers.rs  mod.rs
