[package]
name        = "envswitch"
version     = "0.5.0"
edition     = "2024"
license     = "MIT OR Apache-2.0"
description = "A simple tool for managing sets of environment variables"
repository  = "https://github.com/paholg/envswitch"
homepage    = "https://github.com/paholg/envswitch"
keywords    = ["shell", "cli"]
categories  = ["command-line-utilities", "config"]

[dependencies]
clap       = { version = "4.5.45", features = ["derive"] }
color-eyre = { version = "0.6.5", default-features = false }
eyre       = { version = "0.6.12", default-features = false }
indexmap   = { version = "2.10.0", features = ["serde"] }
itertools  = "0.14.0"
serde      = { version = "1.0.219", features = ["derive"] }
toml       = { version = "0.9.5", features = ["serde"] }

[dev-dependencies]
escargot = "0.5.15"
indoc    = "2.0.6"
strum    = { version = "0.27.2", features = ["derive"] }
tempfile = "3.20.0"

[profile.dist]
inherits = "release"
lto      = "thin"
